--- a/index.html
+++ b/index.html
@@ -4,60 +4,31 @@
     <base target="_blank">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SJF's First Website</title>
+    <title>沈剑峰的第一个网站</title>
     <style>
-        #para22{
+        #para1{
             color: firebrick;
-        }
-        p{
-            color: firebrick;
-            text-align: center;
         }
     </style>
 </head>
 <body>
-    <iframe src="demo_iframe.htm" name="iframe_a" frameborder="0" width="800" height="400"></iframe>
-    <h1 id="para1">这是一个标题</h1>
-    <p>This is paragraph 1</p>
-    <p>This is paragraph 2 : line 1<br>line 2</p>
+    <h1 id="para1">老爸老妈辛苦啦！</h1>
+    <p>嘿嘿这是我做的第一个网页</p>
+    <p>想不到吧<br>哇咔咔</p>
     <section>
-        <h1 id="para1">C&nbsp&nbspC&nbsp&nbspF</h1>
-        <p>China Cheating Foundation</p>
+        <h1 id="para1">沈&nbsp&nbsp剑&nbsp峰&nbsp</h1>
+        <p>牛逼————（破音）</p>
     </section>
-    <a href="https://www.baidu.com" target="iframe_a">This is a link going to baidu</a>
+    <a href="https://Fermidiracc.github.io/selfintro/" target="iframe_a">我的自我介绍</a>
     <h2>This is Title 2</h2>
-    <ul>
-        <li>Fuck You</li>
-        <li>Fuck Yourself</li>
-        <li id="para1">Go Fuck Yourself</li>
-    </ul>
-    <ol>
-        <li>Hei</li>
-        <li>GO FUCK</li>
-        <li>Yourself</li>
-    </ol>
-    <ol type="I" start="29">
+    <ol type="I" start="1">
         <li>I</li>
         <li>am</li>
-        <li>SJF</li>
+        <li id="para1">SJF</li>
     </ol>
     <hr>
     <div style="color:blue">
-        <h1>这是一个标题</h1>
+        <h1>这是一个没什么用的小标题</h1>
     </div>
-    <table border="1" cellspacing="01"><!--表格-->
-        <tr id="para1">
-            <th>Head</th><th>Head</th>
-        </tr>
-        <tr>
-            <td rowspan="2">1</td><td>2</td><!--       -->
-        </tr>
-        <tr>
-            <td>2</td>
-        </tr>
-    </table>
-    <textarea cols="30" rows="20" id="para1">
-        我是文本框
-    </textarea>
 </body>
 </html>
