--- a/selfintro/index.html
+++ b/selfintro/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,19 +8,6 @@
 <body>
     <h1>虽说是自我介绍，其实还没想好写什么</h1>
     <p>其实就是学艺不精</p>
+    <img src="https://github.com/fermidiracc/fermidiracc.github.io/me.jpg" width="450" height="1000">
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>自我介绍</title>
-</head>
-<body>
-    <h1>虽说是自我介绍，其实还没想好写什么</h1>
-    <p>其实就是学艺不精</p>
-</body>
-</html>
->>>>>>> 0d184e5b492cd1860a173eab28399531791332ea
