--- a/selfintro/index.html
+++ b/selfintro/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>虽说是自我介绍，其实还没想好写什么</h1>
     <p>其实就是学艺不精</p>
-    <img src="https://github.com/fermidiracc/fermidiracc.github.io/me.jpg" width="450" height="1000">
+    <img src="https://fermidiracc/fermidiracc.github.io/me.jpg" width="450" height="1000">
 </body>
 </html>
