--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>沈剑峰的第一个网站</title>
     <style>
+        body{
+            background-image: 'https://fermidiracc.github.io/star.jpg';
+        }
         #para1{
             color: firebrick;
         }
