--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>沈剑峰的第一个网站</title>
     <style>
         body{
-            background-image: 'https://fermidiracc.github.io/star.jpg';
+            background-image:url( 'https://fermidiracc.github.io/star.jpg');
+            background-repeat:no-repeat;
+            background-position: center;
+            background-size: cover;
         }
         #para1{
             color: firebrick;
