--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
     <table style="width: 1200px; margin-left: 25px; margin-top: 20px;" >
         <tr>
             <td colspan="2" style="background-color: rgb(228, 167, 54); opacity: 0.6;  font-size:large;">
-                <h1>&nbsp沈剑峰的第一个网站</h1>
+                <h1 style="text-shadow: 2px 2px red;">&nbsp沈剑峰的第一个网站</h1>
             </td>
         </tr>
 
         <tr>
             <td style="background-color: orange; opacity: 0.3; width: 200px; height: 400px; vertical-align: top;">
-                1.<br>
-                2.<br>
+                从这里进入各大网址：<br>
+                1.<a href="http://www.baidu.com/">百度</a>
+                <br>
+                2.<a href="https://cn.bing.com/">必应</a>
+                <br>
                 3.<br>
                 4.
             </td>
