--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         #para1{
             color: firebrick;
         }
+        a:link {color: blue; text-decoration: none;}
+        a:visited {color: blueviolet; text-decoration: none;}
+        a:hover {color: white; text-decoration:underline;}
     </style>
     
 </head>
@@ -43,7 +46,8 @@
             style="background-color: white; 
             opacity: 0.3; 
             vertical-align: top;
-            font-size:xx-large;"
+            font-size:xx-large;
+            font-family:Georgia, 'Times New Roman', Times, serif;"
             >
                 HELLO!
             </td>
